[feature] keyboard scenario control